Additional cleanups